kyverno/kyverno-baseline/05-disallow-privileged-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: unsafe-privileged-pod-v2
  
spec:
  containers:
    - name: nginx
      image: nginx:latest
      securityContext:
        privileged: true
