kyverno/kyverno-baseline/03-require-probes.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-probes
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: require-liveness-and-readiness
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "All containers must define livenessProbe and readinessProbe."
        pattern:
          spec:
            containers:
              - livenessProbe:
                  "*": "*"
                readinessProbe:
                  "*": "*"
